--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "cse341-project1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongodb": "^5.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+    "name": "cse341-project1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write .",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint --fix ."
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "eslint-config-prettier": "^8.8.0",
+        "express": "^4.18.2",
+        "mongodb": "^5.3.0"
+    },
+    "devDependencies": {
+        "eslint": "^8.39.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8"
+    }
 }
