--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
+        "swagger-autogen": "node swagger.js",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
@@ -17,12 +18,14 @@
         "dotenv": "^16.0.3",
         "eslint-config-prettier": "^8.8.0",
         "express": "^4.18.2",
-        "mongodb": "^5.3.0"
+        "mongodb": "^5.3.0",
+        "swagger-ui-express": "^4.6.2"
     },
     "devDependencies": {
         "eslint": "^8.39.0",
         "eslint-plugin-prettier": "^4.2.1",
         "nodemon": "^2.0.22",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "swagger-autogen": "^2.23.1"
     }
 }
